# syncwatcher

./: .gitignore  .gitmodules  Jenkinsfile  LICENSE  README.md
source/projects/FileLister/: FileLister.csproj  FileLister.sln  app.config
source/projects/FileLister/Data/: _cache.xml  amc.ignore.txt  amc.log.txt  fileBot.settings.xml  mutlifilelister.settings.xml
source/projects/FileLister/Model/: MultiFileLister.FileListerSettings.cs  MultiFileLister.cs
source/projects/FileLister/Properties/: AssemblyInfo.cs  Resources.Designer.cs
source/projects/FileLister/Utilities/: DateFormatter.cs
source/projects/FileLister/View/: FileViewerControl.xaml.cs  IpAddressTextBox.xaml  IpAddressTextBox.xaml.cs  MultiFileViewerView.xaml  RenamerView.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  VisualTreeHelpers.cs
source/projects/FileLister/ViewModel/: FileViewerViewModel.cs  MainViewModel.cs  SettingsViewModel.cs
source/projects/SyncWatcherTray/: history.xml  postbuild.bat
source/projects/SyncWatcherTray/Config/: App.config  ProtectedConfig.config
source/shared/Common/: Common.csproj
source/shared/FilebotApi/: FileBotResult.cs  FilebotRecords.cs  FilebotSettings.cs  packages.config
source/shared/MVVM/: DataTemplates.xaml  MVVM.csproj  packages.config
source/shared/Themes/: PathButton.cs  PathButton.xaml  Themes.csproj
source/shared/WinScpApi/: FileHistory.cs  FtpManager.cs  FtpSessionConfig.cs  WinScpApi.csproj
source/solutions/syncwatcher/: SyncWatcher.sln
source/tools/EmptyDirCleaner/: EmptyDirCleaner.sln
src/projects/CMakeTests/: CMakeLists.txt  _CMakeLists.txt
src/projects/CMakeTests/CrossPlatformTest/: CMakeLists.txt  CrossPlatformTest.cpp  CrossPlatformTest.h
src/projects/CMakeTests/RenderEngine/: RenderEngine.vcxproj
src/projects/FileLister/: App.xaml  App.xaml.cs  FileLister.csproj  Paths.cs  Settings.cs  packages.config  todo.txt
src/projects/SyncWatcherTray/: App.xaml  App.xaml.cs  GlobalSuppressions.cs  NotifyIconResources.xaml  SyncWatcherTray.csproj  app.config  packages.config  postbuild.bat  prepareTestData.bat
src/scapyard/pythonsandbox/: test.py
src/shared/Common/: Common.csproj  DelegateCommand.cs  app.config  packages.config
src/shared/FilebotApi/: FileBot.cs  FileBotLogParser.cs  FileBotOrganizeEventArgs.cs  Filebot.ActionType.cs  FilebotApi.csproj  FilebotHelpers.cs  FilebotHistory.cs  FilebotLog.cs  FilebotRecords.cs  FilebotSettings.cs  Settings.cs  app.config  packages.config
src/shared/MVVM/: GlobalSuppressions.cs  MVVM.csproj
src/shared/PlexTools/: PlexScanner.cs  PlexTools.csproj
src/shared/Themes/: Fonts.xaml  PathButton.cs
src/shared/WinScpApi/: FileHistory.cs  FileObject.cs  FileObjectState.cs  FtpClient.cs  FtpManager.cs  WinScpApi.csproj  packages.config
src/solutions/: Projects.sln  Projects.sln.DotSettings  VersionInfo.cs  nuget.config
src/solutions/syncwatcher/: nuget.config
(+249 files in other folders)
